apps/default/flame-dashboard/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flame
  annotations:
    kubernetes.io/ingress.class: traefik-crd-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`dash.claytonc.dev`)
    kind: Rule
    services:
    - name: flame
      port: 80
  tls:
    secretName: flame-tls
